integrate result Codes and base handler using Generics
