# src/api/handlers/Test_handler.go
@@ -152,7 +152,7 @@ func (h *TestHandler) BodyBinder(c *gin.Context) {
 	// c.BindJSON(&p)
 	err := c.ShouldBindJSON(&p)
 	if err != nil {
-		c.AbortWithStatusJSON(http.StatusBadRequest, helper.GenerateBaseResponseWithValidationError(nil, false, -1, err))
+		c.AbortWithStatusJSON(http.StatusBadRequest, helper.GenerateBaseResponseWithValidationError(nil, false, helper.ValidationError, err))
 		return
 	}
 
