# src/api/handlers/files.go
@@ -47,7 +47,7 @@ func (h *FileHandler) Create(c *gin.Context) {
 	upload := dto.UploadFileRequest{}
 	err := c.ShouldBind(&upload)
 	if err != nil {
-		c.AbortWithStatusJSON(http.StatusBadRequest, helper.GenerateBaseResponseWithValidationError(nil, false, 121, err))
+		c.AbortWithStatusJSON(http.StatusBadRequest, helper.GenerateBaseResponseWithValidationError(nil, false, helper.ValidationError, err))
 		return
 	}
 	req := dto.CreateFileRequest{}
@@ -58,7 +58,7 @@ func (h *FileHandler) Create(c *gin.Context) {
 
 	if err != nil {
 		c.AbortWithStatusJSON(helper.TranslateErrorToStatusCode(err),
-			helper.GenerateBaseResponseWithError(nil, false, 121, err))
+			helper.GenerateBaseResponseWithError(nil, false, helper.InternatlError, err))
 		return
 	}
 
@@ -66,10 +66,10 @@ func (h *FileHandler) Create(c *gin.Context) {
 
 	if err != nil {
 		c.AbortWithStatusJSON(helper.TranslateErrorToStatusCode(err),
-			helper.GenerateBaseResponseWithError(nil, false, 121, err))
+			helper.GenerateBaseResponseWithError(nil, false, helper.InternatlError, err))
 		return
 	}
-	c.JSON(http.StatusCreated, helper.GenerateBaseResponse(res, true, 0))
+	c.JSON(http.StatusCreated, helper.GenerateBaseResponse(res, true, helper.Success))
 }
 
 func saveUploadFile(file *multipart.FileHeader, directory string) (string, error) {
@@ -120,24 +120,7 @@ func saveUploadFile(file *multipart.FileHeader, directory string) (string, error
 // @Router /v1/files/{id} [put]
 // @Security BearerAuth
 func (h *FileHandler) Update(c *gin.Context) {
-	id, _ := strconv.Atoi(c.Params.ByName("id"))
-
-	req := dto.UpdateFileRequest{}
-	err := c.ShouldBindJSON(&req)
-	if err != nil {
-		c.AbortWithStatusJSON(http.StatusBadRequest,
-			helper.GenerateBaseResponseWithError(nil, false, 121, err))
-		return
-	}
-
-	res, err := h.services.UpdateFile(c, id, &req)
-
-	if err != nil {
-		c.AbortWithStatusJSON(helper.TranslateErrorToStatusCode(err),
-			helper.GenerateBaseResponseWithError(nil, false, 121, err))
-		return
-	}
-	c.JSON(http.StatusOK, helper.GenerateBaseResponse(res, true, 0))
+	Update(c, h.services.UpdateFile)
 }
 
 // DeleteFile godoc
@@ -156,14 +139,14 @@ func (h *FileHandler) Delete(c *gin.Context) {
 	id, _ := strconv.Atoi(c.Params.ByName("id"))
 	if id == 0 {
 		c.AbortWithStatusJSON(http.StatusNotFound,
-			helper.GenerateBaseResponse(nil, false, 121))
+			helper.GenerateBaseResponse(nil, false, helper.ValidationError))
 		return
 	}
 	file, err := h.services.GetFileById(c, id)
 	if err != nil {
 		Logger.Error(logging.IO, logging.RemoveFile, err.Error(), nil)
 		c.AbortWithStatusJSON(http.StatusNotFound,
-			helper.GenerateBaseResponse(nil, false, 121))
+			helper.GenerateBaseResponse(nil, false, helper.NotFoundError))
 		return
 	}
 	err = os.Remove(fmt.Sprintf("%s/%s", file.Directory, file.Name))
@@ -171,17 +154,17 @@ func (h *FileHandler) Delete(c *gin.Context) {
 	if err != nil {
 		Logger.Error(logging.IO, logging.RemoveFile, err.Error(), nil)
 		c.AbortWithStatusJSON(http.StatusNotFound,
-			helper.GenerateBaseResponse(nil, false, 121))
+			helper.GenerateBaseResponse(nil, false, helper.InternatlError))
 		return
 	}
 	err = h.services.DeleteFile(c, id)
 
 	if err != nil {
 		c.AbortWithStatusJSON(helper.TranslateErrorToStatusCode(err),
-			helper.GenerateBaseResponseWithError(nil, false, 121, err))
+			helper.GenerateBaseResponseWithError(nil, false, helper.InternatlError, err))
 		return
 	}
-	c.JSON(http.StatusCreated, helper.GenerateBaseResponse(nil, true, 222))
+	c.JSON(http.StatusCreated, helper.GenerateBaseResponse(nil, true, helper.Success))
 }
 
 // GET
@@ -198,21 +181,7 @@ func (h *FileHandler) Delete(c *gin.Context) {
 // @Router /v1/files/{id} [get]
 // @Security BearerAuth
 func (h *FileHandler) GetById(c *gin.Context) {
-	id, _ := strconv.Atoi(c.Params.ByName("id"))
-	if id == 0 {
-		c.AbortWithStatusJSON(http.StatusNotFound,
-			helper.GenerateBaseResponse(nil, false, 121))
-		return
-	}
-
-	res, err := h.services.GetFileById(c, id)
-
-	if err != nil {
-		c.AbortWithStatusJSON(helper.TranslateErrorToStatusCode(err),
-			helper.GenerateBaseResponseWithError(nil, false, 121, err))
-		return
-	}
-	c.JSON(http.StatusCreated, helper.GenerateBaseResponse(res, true, 0))
+	GetById(c, h.services.GetFileById)
 }
 
 // Get Files godoc
@@ -227,22 +196,5 @@ func (h *FileHandler) GetById(c *gin.Context) {
 // @Router /v1/files/get-by-filter [post]
 // @Security BearerAuth
 func (h *FileHandler) GetByFilter(c *gin.Context) {
-
-	req := dto.PaginationInputWithFilter{}
-	err := c.ShouldBindJSON(&req)
-	if err != nil {
-		c.AbortWithStatusJSON(http.StatusBadRequest,
-			helper.GenerateBaseResponseWithError(nil, false, 121, err))
-		return
-	}
-
-	res, err := h.services.GetByFilter(c, &req)
-
-	if err != nil {
-		c.AbortWithStatusJSON(helper.TranslateErrorToStatusCode(err),
-			helper.GenerateBaseResponseWithError(nil, false, 121, err))
-		return
-	}
-	c.JSON(http.StatusOK, helper.GenerateBaseResponse(res, true, 0))
-
+	GetByFilter(c, h.services.GetByFilter)
 }
