# src/api/middlewares/auth.go
@@ -38,7 +38,7 @@ func Authentication(cfg *config.Config) gin.HandlerFunc {
 		}
 
 		if err != nil {
-			c.AbortWithStatusJSON(http.StatusUnauthorized, helper.GenerateBaseResponseWithError(nil, false, 401, err))
+			c.AbortWithStatusJSON(http.StatusUnauthorized, helper.GenerateBaseResponseWithError(nil, false, helper.AuthError, err))
 			return
 		}
 
@@ -56,13 +56,13 @@ func Authentication(cfg *config.Config) gin.HandlerFunc {
 func Authorization(validRoles []string) gin.HandlerFunc {
 	return func(c *gin.Context) {
 		if len(c.Keys) == 0 {
-			c.AbortWithStatusJSON(http.StatusForbidden, helper.GenerateBaseResponse(nil, false, -300))
+			c.AbortWithStatusJSON(http.StatusForbidden, helper.GenerateBaseResponse(nil, false, helper.ForbiddenError))
 			return
 		}
 		rolesVal := c.Keys[constants.RolesKey]
 		fmt.Println(rolesVal)
 		if rolesVal == nil {
-			c.AbortWithStatusJSON(http.StatusForbidden, helper.GenerateBaseResponse(nil, false, -301))
+			c.AbortWithStatusJSON(http.StatusForbidden, helper.GenerateBaseResponse(nil, false, helper.ForbiddenError))
 			return
 		}
 		roles := rolesVal.([]interface{})
@@ -77,7 +77,7 @@ func Authorization(validRoles []string) gin.HandlerFunc {
 				return
 			}
 		}
-		c.AbortWithStatusJSON(http.StatusForbidden, helper.GenerateBaseResponse(nil, false, -301))
+		c.AbortWithStatusJSON(http.StatusForbidden, helper.GenerateBaseResponse(nil, false, helper.ForbiddenError))
 
 	}
 }
