# src/api/middlewares/custom_recovery.go
@@ -10,10 +10,10 @@ import (
 func CustomRecoveryHandler(c *gin.Context, err any) {
 
 	if err, ok := err.(error); ok {
-		httpResponse := helper.GenerateBaseResponseWithError(nil, false, -500, err)
+		httpResponse := helper.GenerateBaseResponseWithError(nil, false, helper.CustomRecovery, err)
 		c.AbortWithStatusJSON(http.StatusInternalServerError, httpResponse)
 		return
 	}
-	httpResponse := helper.GenerateBaseResponseWithAnyError(nil, false, -500, err)
+	httpResponse := helper.GenerateBaseResponseWithAnyError(nil, false, helper.CustomRecovery, err)
 	c.AbortWithStatusJSON(http.StatusInternalServerError, httpResponse)
 }
